--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation "com.jakewharton:butterknife:8.8.1"
     annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
 
+    implementation "com.facebook.fresco:fresco:1.9.0"
     implementation "org.qiyi.video:neptune:2.5.0"
 
 }
